--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body {
 }
 
 header {
-    border: solid 2px rgb(255, 255, 255);
+    border: solid 2px rgb(35, 191, 72);
     font-size: 32px;
     padding: 10px;
-    color: aliceblue;
+    color: rgb(30, 20, 172);
 }
 
 h1 {
