--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-    border: solid 2px rgb(93, 139, 213));
+    border: solid 2px rgb(93, 139, 213);
     font-size: 32px;
     padding: 10px;
     color: rgb(30, 20, 172);
