--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: rgb(93, 139, 213); /* cor de fundo da página*/
-    color:midnightblue; /* cor da escrita */
+    background-color: rgb(191, 17, 17); /* cor de fundo da página*/
+    color:rgb(255, 255, 255); /* cor da escrita */
 }
 
 header {
-    border: solid 2px rgb(25, 25, 112);
+    border: solid 2px rgb(255, 255, 255);
     font-size: 32px;
     padding: 10px;
-    color: rgb(93, 139, 213);
+    color: alicered;
 }
 
 h1 {
@@ -18,5 +18,5 @@ h1 {
 
 p {
     font-size: 16px;
-    color: aliceblue;
+    color: alicered;
 }
