--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@ header {
     color: white;
 }
 
+section {
+    background-color: rgb(34, 121, 207);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
 h1 {
     font-size: 30px; /* tamanho da fonte */
     text-align: center; /* centralizado*/
